UI Updates: Dynamic IP Addr, Loading info, Title
- App checks 10 times for every 10 secs until it gets an IP Addr
- Loading is printed when button is Start button is clicked (Broken)
- Background image is changed to AM62A

Signed-off-by: Sai Sree Kartheek Adivi <s-adivi@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,6 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>images/Texas-Instruments.png</file>
-        <file>images/sk-am62-angled.png</file>
+        <file>images/wallpaper.jpg</file>
     </qresource>
 </RCC>
