Add benchmarks screen
- GPU benchmarks for glmark application
- This needs the script glmanhatscript.sh to have the below contents:
  #! /bin/sh
  /home/root/gfxbench5-bins/testfw_app --gfx egl -w 640 -h 480 -t gl_manhattan_off

Signed-off-by: Subhrajeet <l-biswal@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -20,5 +20,6 @@
         <file>images/Repeat_Grid.png</file>
         <file>images/servo-drives-icon.png</file>
         <file>images/Plus_Box.png</file>
+        <file>images/playbutton.png</file>
     </qresource>
 </RCC>
