--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,10 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>industrial.qml</file>
+        <file>benchmarks.qml</file>
+        <file>stats.qml</file>
+        <file>gpuperformance.qml</file>
         <file>images/Texas-Instruments.png</file>
         <file>images/Top_Righ_Box.png</file>
        
