Restructure and fix build issues
- main.qml is a toplevel file which defines the layout of the
  application. So it makes sense to be on the top level. All the things
  displayed in the main.qml can go inside apps dir.
- CONFIGS+=qmltypes won't work in QML 5.15. Use CPP APIs to register
  custom QML objects

Signed-off-by: Sai Sree Kartheek Adivi <s-adivi@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>apps/main.qml</file>
-        <file>mainprev.qml</file>
+        <file>main.qml</file>
         <file>apps/industrial_control.qml</file>
         <file>apps/benchmarks.qml</file>
         <file>apps/stats.qml</file>
