--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,11 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>apps/topbar.qml</file>
+        <file>apps/appsmenu.qml</file>
+        <file>apps/deviceinfo.qml</file>
+        <file>apps/clock1.qml</file>
+        <file>apps/clock2.qml</file>
         <file>apps/industrial_control.qml</file>
         <file>apps/benchmarks.qml</file>
         <file>apps/stats.qml</file>
