--- a/qml.qrc
+++ b/qml.qrc
@@ -4,8 +4,6 @@
         <file>apps/topbar.qml</file>
         <file>apps/appsmenu.qml</file>
         <file>apps/deviceinfo.qml</file>
-        <file>apps/clock1.qml</file>
-        <file>apps/clock2.qml</file>
         <file>apps/industrial_control.qml</file>
         <file>apps/benchmarks.qml</file>
         <file>apps/stats.qml</file>
@@ -30,6 +28,8 @@
         <file>images/3D_with_text.png</file>
         <file>images/On_Button.png</file>
         <file>images/Off_Button.png</file>
+        <file>images/bluerect.png</file>
+        <file>images/modebutton.png</file>
         <file>images/Repeat_Grid.png</file>
         <file>images/servo-drives-icon.png</file>
         <file>images/Plus_Box.png</file>
