added Automatic mode and new circular gauge in industrial hmi; added cpp files for all .h files; added new config files ;added utils folder
Signed-off-by: Subhrajeet <l-biswal@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,13 +4,12 @@
         <file>apps/topbar.qml</file>
         <file>apps/appsmenu.qml</file>
         <file>apps/deviceinfo.qml</file>
-        <file>apps/clock1.qml</file>
-        <file>apps/clock2.qml</file>
         <file>apps/industrial_control.qml</file>
         <file>apps/benchmarks.qml</file>
         <file>apps/stats.qml</file>
         <file>apps/gpu_performance.qml</file>
         <file>apps/camera_recorder.qml</file>
+        <file>apps/camera_old.qml</file>
 
         <file>images/Texas-Instruments.png</file>
         <file>images/record.png</file>
@@ -22,6 +21,10 @@
         <file>images/Center_Box.png</file>
         <file>images/Bottom_Right_Box.png</file>
         <file>images/Background.png</file>
+        <file>images/gaugebackground.png</file>
+        <file>images/gaugebackground.svg</file>
+        <file>images/needle.svg</file>
+        <file>images/tickmark.svg</file>
         <file>images/Rectangle.png</file>
         <file>images/Analytics_with_text.png</file>
         <file>images/Camera_with_text.png</file>
@@ -30,6 +33,8 @@
         <file>images/3D_with_text.png</file>
         <file>images/On_Button.png</file>
         <file>images/Off_Button.png</file>
+        <file>images/bluerect.png</file>
+        <file>images/modebutton.png</file>
         <file>images/Repeat_Grid.png</file>
         <file>images/servo-drives-icon.png</file>
         <file>images/Plus_Box.png</file>
