--- a/qml.qrc
+++ b/qml.qrc
@@ -9,6 +9,7 @@
         <file>apps/stats.qml</file>
         <file>apps/gpu_performance.qml</file>
         <file>apps/camera_recorder.qml</file>
+        <file>apps/camera_old.qml</file>
 
         <file>images/Texas-Instruments.png</file>
         <file>images/record.png</file>
