live_camera: add new application for am62xx-evm and cleanup
Signed-off-by: Sai Sree Kartheek Adivi <s-adivi@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -10,6 +10,7 @@
         <file>apps/gpu_performance.qml</file>
         <file>apps/camera_recorder.qml</file>
         <file>apps/camera_old.qml</file>
+        <file>apps/live_camera.qml</file>
 
         <file>images/Texas-Instruments.png</file>
         <file>images/record.png</file>
