integrated livecamera in am68-sk.cpp
Signed-off-by: Subhrajeet <l-biswal@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -42,6 +42,8 @@
         <file>images/Repeat_Grid.png</file>
         <file>images/servo-drives-icon.png</file>
         <file>images/Plus_Box.png</file>
+        <file>images/up-arrow.png</file>
+        <file>images/alarm.png</file>
         <file>images/playbutton.png</file>
     </qresource>
 </RCC>
