--- a/qml.qrc
+++ b/qml.qrc
@@ -44,6 +44,10 @@
         <file>images/Plus_Box.png</file>
         <file>images/up-arrow.png</file>
         <file>images/alarm.png</file>
+        <file>images/battery.png</file>
+        <file>images/tempalert.png</file>
+        <file>images/alert.png</file>
+        <file>images/maintainence.png</file>
         <file>images/playbutton.png</file>
     </qresource>
 </RCC>
