--- a/qml.qrc
+++ b/qml.qrc
@@ -45,6 +45,7 @@
         <file>images/up-arrow.png</file>
         <file>images/alarm.png</file>
         
+        <file>images/low-battery.png</file>
         <file>images/tempalert.png</file>
         <file>images/alert.png</file>
         <file>images/maintainence.png</file>
