--- a/qml.qrc
+++ b/qml.qrc
@@ -44,11 +44,12 @@
         <file>images/Plus_Box.png</file>
         <file>images/up-arrow.png</file>
         <file>images/alarm.png</file>
-        
+        <file>images/security.png</file>
         <file>images/low-battery.png</file>
         <file>images/tempalert.png</file>
         <file>images/alert.png</file>
         <file>images/maintainence.png</file>
         <file>images/playbutton.png</file>
+        <file>images/wifi.png</file>
     </qresource>
 </RCC>
