--- a/qml.qrc
+++ b/qml.qrc
@@ -37,8 +37,8 @@
         <file>images/3D_with_text.png</file>
         <file>images/On_Button.png</file>
         <file>images/Off_Button.png</file>
-        <file>images/bluerect.png</file>
-        <file>images/modebutton.png</file>
+        <file>images/mode1.png</file>
+        <file>images/mode2.png</file>
         <file>images/Repeat_Grid.png</file>
         <file>images/servo-drives-icon.png</file>
         <file>images/Plus_Box.png</file>
