--- a/qml.qrc
+++ b/qml.qrc
@@ -15,6 +15,7 @@
         <file>apps/firefox_browser.qml</file>
         <file>apps/3d_demo.qml</file>
         <file>apps/settings.qml</file>
+        <file>apps/arm_analytics.qml</file>
 
         <file>images/Texas-Instruments.png</file>
         <file>images/record.png</file>
