configs: Add SDK datasheet link to AM68/69 benchmarks apps
- Add benchmarks_jacinto.qml to add latest SDK datasheet link

Signed-off-by: Karan Saxena <karan@ti.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,6 +6,7 @@
         <file>apps/deviceinfo.qml</file>
         <file>apps/industrial_control.qml</file>
         <file>apps/benchmarks.qml</file>
+        <file>apps/benchmarks_jacinto.qml</file>
         <file>apps/stats.qml</file>
         <file>apps/gpu_performance.qml</file>
         <file>apps/camera_recorder.qml</file>
