--- a/qml.qrc
+++ b/qml.qrc
@@ -5,6 +5,7 @@
         <file>apps/appsmenu.qml</file>
         <file>apps/deviceinfo.qml</file>
         <file>apps/industrial_control.qml</file>
+        <file>apps/industrial_control_minimal.qml</file>
         <file>apps/benchmarks.qml</file>
         <file>apps/benchmarks_jacinto.qml</file>
         <file>apps/stats.qml</file>
@@ -65,5 +66,6 @@
         <file>images/3d.png</file>
         <file>images/gpu_performance.png</file>
         <file>images/settings.png</file>
+
     </qresource>
 </RCC>
