Wallpaper: Make wallpaper platform specific
Make wallpaper platform specific.
Add AM62SIP wallpaper.

Signed-off-by: Sai Sree Kartheek Adivi <sskartheek.adivi@outlook.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -21,6 +21,7 @@
 
         <file>images/Texas-Instruments.png</file>
         <file>images/am6x_oob_demo_home_image.png</file>
+        <file>images/am62sip_wallpaper.png</file>
         <file>images/record.png</file>
         <file>images/videostop.png</file>
         <file>images/stop-button.png</file>
