--- a/qml.qrc
+++ b/qml.qrc
@@ -20,6 +20,7 @@
         <file>apps/arm_analytics.qml</file>
 
         <file>images/Texas-Instruments.png</file>
+        <file>audios/button_click.wav</file>
         <file>images/am6x_oob_demo_home_image.png</file>
         <file>images/am62sip_wallpaper.png</file>
         <file>images/record.png</file>
