ti-demo: Add cluster demo and provision to build single app
- building single app: With this change, individual qml apps can be
  tested and deployed by building ti-demo.pro instead of ti-apps-launcher.pro.
- cluster_demo: This demo replicates a car dashboard.

Signed-off-by: Sai Sree Kartheek Adivi <s-adivi@ti.com>

--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>ti-apps-launcher.qml</file>
         <file>apps/topbar.qml</file>
         <file>apps/appsmenu.qml</file>
         <file>apps/deviceinfo.qml</file>
