--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -5,6 +5,7 @@
         <file>apps/appsmenu.qml</file>
         <file>apps/deviceinfo.qml</file>
         <file>apps/industrial_control.qml</file>
+        <file>apps/industrial_control_sitara.qml</file>
         <file>apps/industrial_control_minimal.qml</file>
         <file>apps/benchmarks.qml</file>
         <file>apps/benchmarks_jacinto.qml</file>
