AM62P: Add new video playback application
The video playback application lets the user choose between H.264 and
H.265 video for playback.

Signed-off-by: Sai Sree Kartheek Adivi <s-adivi@ti.com>

--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -10,6 +10,7 @@
         <file>apps/benchmarks.qml</file>
         <file>apps/benchmarks_jacinto.qml</file>
         <file>apps/stats.qml</file>
+        <file>apps/codecs.qml</file>
         <file>apps/gpu_performance.qml</file>
         <file>apps/camera_recorder.qml</file>
         <file>apps/camera_old.qml</file>
