--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -17,6 +17,7 @@
         <file>apps/live_camera.qml</file>
         <file>apps/seva_store.qml</file>
         <file>apps/firefox_browser.qml</file>
+        <file>apps/chromium_browser.qml</file>
         <file>apps/3d_demo.qml</file>
         <file>apps/settings.qml</file>
         <file>apps/arm_analytics.qml</file>
