--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -12,8 +12,7 @@
         <file>apps/stats.qml</file>
         <file>apps/codecs.qml</file>
         <file>apps/gpu_performance.qml</file>
-        <file>apps/camera_recorder.qml</file>
-        <file>apps/camera_old.qml</file>
+        <file>apps/camera.qml</file>
         <file>apps/live_camera.qml</file>
         <file>apps/seva_store.qml</file>
         <file>apps/firefox_browser.qml</file>
