Sitara: Add Chromium browser support
Signed-off-by: Sai Sree Kartheek Adivi <s-adivi@ti.com>

--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -11,6 +11,7 @@
         <file>apps/benchmarks_jacinto.qml</file>
         <file>apps/stats.qml</file>
         <file>apps/codecs.qml</file>
+        <file>apps/chromium_browser.qml</file>
         <file>apps/gpu_performance.qml</file>
         <file>apps/camera.qml</file>
         <file>apps/live_camera.qml</file>
