Revert "Merge pull request #58 from TexasInstruments/cluster-fix"
This reverts commit 5bc6acad31c5281d53ae4bc73e1522e54cf2e81a, reversing
changes made to 0264f4c92680b8b5891ead9691b724d09ebe7590.

--- a/ti-demo.qrc
+++ b/ti-demo.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>ti-demo.qml</file>
-        <file>qml/auto_cluster.qml</file>
+        <file>apps/auto_cluster.qml</file>
     </qresource>
 </RCC>
