Add Wifi Demo for am62xx-evm
This commit adds initial wifi demo support for am62xx-evm in
ti-apps-launcher.

Features:
- Connect to wifi using ssid, password, pmf.
- Connect to enterprise account supported.
- Different security type NONE, WPA-PSK, SAE, WPA-EAP, WPA-EAP-SHA256.

Signed-off-by: Paresh Bhagat <p-bhagat@ti.com>

--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -18,6 +18,7 @@
         <file>apps/seva_store.qml</file>
         <file>apps/3d_demo.qml</file>
         <file>apps/settings.qml</file>
+        <file>apps/wifi.qml</file>
         <file>apps/arm_analytics.qml</file>
     </qresource>
 </RCC>
