Add terminal application for Sitara devices
This commit adds terminal application based on qmlterwidget in
ti-apps-launcher.

Signed-off-by: Paresh Bhagat <p-bhagat@ti.com>

--- a/ti-apps-launcher.qrc
+++ b/ti-apps-launcher.qrc
@@ -20,5 +20,6 @@
         <file>apps/settings.qml</file>
         <file>apps/wifi.qml</file>
         <file>apps/arm_analytics.qml</file>
+        <file>apps/terminal.qml</file>
     </qresource>
 </RCC>
